[tool.poetry]
name = "MC6809"
version = "0.6.0"
description = "MC6809 CPU emulator written in Python"
authors = ["JensDiemer <git@jensdiemer.de>"]
packages = [
    { include = "MC6809" },
]
keywords=["MC6809", "CPU", "Emulator"]
classifiers = [
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Emulators",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Testing",
]
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "*"

[tool.poetry.dev-dependencies]
#DragonPyEmulator = "*"  # run DragonPy tests, to. e.g. with BASIC Interpreter
poetry_publish = "*"
tox = "*"
pytest = "*"
pytest-cov = "*"
isort = "*"
flake8 = "*"
flynt = "*"
autopep8 = "*"

[tool.poetry.scripts]
publish = "MC6809.publish:publish"
MC6809 = "MC6809.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
